# arte-ephys

./: .gitignore  .travis.yml  Paths_arte_ephys.hs  README.md  arte-ephys.cabal  arteDecode.hp  arteDecode.prof  install_notes.txt  shell-common.nix  watchfield.hp
ArteBackend/: Backend.hs  DataSource.hs  Filter.hs  arte-backend.cabal
ArteBase/: ArteBase.hs  Base.hs  Daq.hs  DaqSettings.hs  DataSourceSettings.hs  Network.hs  NetworkSettings.hs  RingBuffer.hs  ZmqUtils.hs  arte-base.cabal  observations.txt
ArteBase/c/: buffer.c  filter.h
ArteBase/src/System/Arte/: ArteBase.hs  DaqSettings.hs  NetworkSettings.hs  ZmqUtils.hs
ArteCommon/: arte-common.cabal
ArteCommon/c/: buffer.c  buffer.h  spike.h
ArteCommon/oddballs/: buffer_test.c
ArteCommon/oddballs/System/Arte/: BackendC.hsc  DataSourceSettings.hs
ArteCommon/src/Arte/: Common.hs  FileUtils.hs
ArteCommon/src/Arte/Common/: FileUtils.hs  Net.hs  NetMessage.hs  Network.hs  NetworkB.hs  NetworkMessage.hs
ArteCommon/src/System/Arte/: DaqSettings.hs  Network.hs
ArteDecode/: arte-decode.cabal  report.html
ArteDecode/bench/: DecodeAlgoBench.hs
ArteDecode/src/: ArteDecode.hs  DecodeAlgo.hs  DecoderDefs.hs  DecoderState.hs  DrawingHelpers.hs
ArteLfpViewer/: LfpTrace.hs  LfpTraceData.hs  LfpViewer.hs  LfpViewerState.hs  RenderLfp.hs  TraceGeometry.hs  arte-lfp-viewer.cabal
ArteLfpViewer/src/: LfpViewer.hs  LfpViewerState.hs
ArteMaster/: Master.hs  arte-master.cabal  arte-master.hs
ArteMaster/src/: Master.hs
ArteMockMWL/: LICENSE  arte-mock-mwl.cabal
ArteMockMWL/src/: ArteMockMWL.hs
ArteMockSpikes/: Paths_arte_mock_spikes.hs  arte-mock-mwl.cabal  arte-mock-spikes.cabal
ArteMockSpikes/src/: ArteMockMWL.hs  ArteMockSpikes.hs
ArteSimple/: Simple.hs  arte-simple.cabal
ArteSpikeViewer/: dotplot.hs
arte-backend/: README.md  arte-backend.cabal
arte-backend/src/System/Arte/: Backend.hs
arte-command/: README.md  arte-command.cabal
arte-command/src/System/Arte/: Master.hs
arte-decoder/: .ghci  README.md  arte-decoder.cabal  default.nix  shell.nix  test.sh
arte-decoder/exec/: MasterDecoder.hs  MasterGui.hs  TrodeDecoder.hs  collectBenchData.hs
arte-decoder/src/System/Arte/: Decode.hs
arte-decoder/src/System/Arte/Decode/: Algorithm.hs  Config.hs  Graphics.hs  GraphicsRasterific.hs  Histogram.hs  Server.hs  Types.hs
arte-lfp-viewer/: README.md  arte-lfp-viewer.cabal
arte-lfp-viewer/src/System/Arte/: LfpViewer.hs
arte-lib/: README.md  arte-lib.cabal  default.nix
arte-lib/src/System/Arte/: CommandPort.hs  DataPublisher.hs  FileUtils.hs  Net.hs  NetworkTime.hs  Simple.hs  TimeClient.hs  TimeSync.hs
arte-lib/src/System/Arte/TimeSync/: Internal.hs
arte-mock-data/: README.md  arte-mock-data.cabal  default.nix
arte-mock-data/src/: Main.hs  Types.hs
arte-mock-data/src/System/Arte/MockData/: FakeRat.hs  StreamPFile.hs  StreamTTFile.hs
arte-spike-viewer/: README.md  arte-spike-viewer.cabal
arte-spike-viewer/src/System/Arte/: SpikeViewer.hs
arte-spike-viewer/src/System/Arte/SpikeSorter/: dotplot.hs
arte-time-sync/: arte-time-sync.c
arte-tracker/: README.md
arte-tracker/src/System/Arte/Tracker/: Initialize.hs  Kalman.hs  State.hs  Types.hs
backend/src_c/: Makefile  dataSource.cpp  dataSource.h  mockNidaqmx.c  mockNidaqmx.h
backend/src_haskell/: DataSource.hs  arte-backend.cabal
backend_c/src/: Makefile  dataSource  dataSource.cpp  dataSource.h
default_config/: backend_setup.conf  backend_setup.yaml  backend_setup_single_machine.yaml  lfpViewer.conf  master.conf  mockdata.cfg  mockdata.conf  network.conf  session.conf
documentation/: install_notes.txt  installation.markdown
documentation/hcar/: 2013-arte-ephys.tex
exec/: decodeDiagramMovie.hs  testPublisher.hs  tracker.hs
exec/streamPFile/: streamPFile.cabal
exec/streamPFile/src/: Main.hs
exec/streamTTFile/: streamTTFile.cabal
exec/streamTTFile/src/: Main.hs
experimental/kalman_tracker/: Kalman.hs  Main.hs  kalman-tracker.cabal  kalman_2d_rat.asv  kalman_2d_rat.m
hcar/: arte-ephys-hcar.tex  arteephysRealtimeelectrop-Ga.tex
profileData/: arteMockSpikes.hp
sample_output/: arteDecode.hp  report.html
scripts/: heapDemo.sh  killDemo.sh  profileDemo.sh  resetSandboxes.sh  setupSandbox.sh  simpleDemo.sh
src-exec/: decode.hs
src/System/Arte/: Backend.hs  CommandPort.hs  DataPublisher.hs  Decode.hs  FileUtils.hs  Master.hs  MockData.hs  Net.hs  NetMessage.hs  Simple.hs  Tracker.hs
src/System/Arte/Backend/: BackendState.hs
src/System/Arte/Decode/: Algorithm.hs  Config.hs  DecodeAlgo.hs  DecoderDefs.hs  DecoderState.hs  DrawingHelpers.hs  Graphics.hs  Histogram.hs  KdMap.hs  Types.hs
src/System/Arte/LfpViewer/: LfpTraceData.hs  LfpViewerState.hs  RenderLfp.hs  TraceGeometry.hs
src/System/Arte/Tracker/: Calbirate.hs  Initialize.hs  Server.hs  Types.hs  Video.hs
src/System/Arte/Util/: FileUtils.hs  NetMessage.hs
tetrode-ephys/: default.nix  tetrode-ephys.cabal
tetrode-ephys/src/Data/: Ephys.hs
tetrode-ephys/src/Data/Ephys/: Cluster.hs  EphysDefs.hs  PlaceCell.hs  Position.hs  PositionDecoding.hs  Spike.hs  Timeseries.hs  TrackPosition.hs  TrackSpec.hs
tetrode-ephys/src/Data/Ephys/OldMWL/: FileInfo.hs  Header.hs  Parse.hs  ParseClusterFile.hs  ParsePFile.hs  ParsePxyabw.hs  ParseSpike.hs
tetrode-ephys/src/Data/Ephys/Timeseries/: Filter.hs  Resample.hs  Types.hs
tetrode-ephys/src/Data/Map/: KDMap.hs
tetrode-graphics/: default.nix  tetrode-graphics.cabal
tetrode-graphics/src/Data/Ephys/: DiagramsPictures.hs  GlossPictures.hs
