name:                     arte-ephys
version:                  0.1
homepage:                 http://github.com/ImAlsoGreg/arte-ephys
synopsis:                 A soft-realtime tetrode recording system
description:              
        arte-ephys is a soft-realtime tetrode recording system.
        It collects data in small (~1ms) buffers for filtering,
        spike detection, network transfer, viewing, and
        online feedback.
category:                 Science
license:                  GPL-3
license-file:             LICENSE
author:                   Greg Hale
maintainer:               imalsogreg@gmail.com
cabal-version:            >= 1.2
build-type:               Simple

library
        build-depends:      yaml >= 0.5
                          , zeromq-haskell
                          , containers
                          , text
                          , vector
                          , base
                          , unordered-containers
        ghc-options:      -Wall
        hs-source-dirs:   ArteBase
        exposed-modules:  DaqSettings, DataSourceSettings

executable arte-backend
           main-is:        Backend.hs
           ghc-options:    -Wall
           hs-source-dirs: ArteBackend, ArteBase
           other-modules:  DaqSettings, DataSourceSettings, DataSource

executable arte-master
           build-depends:  wxcore, wx, mtl, stm >= 2.4
           main-is:        Master.hs
           ghc-options:    -Wall
           hs-source-dirs: ArteMaster, ArteBase
           other-modules:  DaqSettings, DataSourceSettings, ArteBase

executable arte-simple
           build-depends:  wx, mtl, bytestring, zeromq-haskell
           main-is:        Simple.hs
           ghc-options:    -Wall
           hs-source-dirs: ArteSimple, ArteBase

executable arte-lfp-viewer
           build-depends:  zeromq-haskell, GLFW-b, OpenGL, GLURaw, scrollbuffer, time
           main-is:        LfpViewer.hs
           ghc-options:    -Wall
           hs-source-dirs: ArteLfpViewer, ArteBase