name:                arte-ephys
version:             0.1.0.0
synopsis:            Software for recording and analyzing tetrode data in realtime
-- description:         
homepage:            github.com/ImAlsoGreg/arte-ephys
license:             GPL-3
license-file:        LICENSE
author:              Greg Hale
maintainer:          imalsogreg@gmail.com
copyright:           Greg Hale 2014
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     System.Arte.FileUtils
                     , System.Arte.Net
                     , System.Arte.NetMessage
                     , System.Arte.DataPublisher
                     , System.Arte.CommandPort
                     , System.Arte.Decode
                     , System.Arte.Decode.Config
                     , System.Arte.Decode.Graphics
                     , System.Arte.Decode.Types
                     , System.Arte.Decode.Algorithm
                     , System.Arte.Decode.Histogram
                     , System.Arte.Tracker
                     , System.Arte.Tracker.Types
                     , System.Arte.Tracker.Initialize
  other-modules:     Paths_arte_ephys
  build-depends:     aeson
                     , array
                     , async 
                     , base >=4.6 && <4.8
                     , base64-bytestring
                     , bytestring >=0.10 && <0.11
                     , cereal
                     , cmdargs >=0.10 && <0.11
                     , configurator
                     , containers >=0.5 && <0.6
                     , data-clist
                     , deepseq >=1.3 && <1.4
                     , directory >=1.2 && <1.3
                     , errors
                     , either
                     , filepath >=1.3 && <1.4
                     , ffmpeg-light >= 0.8.1 && < 0.9
                     , gloss
                     , haskell-src-exts >= 1.15 && < 1.16
                     , io-streams
                     , JuicyPixels
                     , lens >= 4.0
                     , lens-aeson >= 1.0 && < 1.1
                     , network >=2.5 && <2.6
                     , optparse-applicative
                     , pipes >= 4.0
                     , pipes-rt
                     , random >=1.0 && <1.1
                     , safe
                     , stm >=2.4 && <2.5
                     , text >=1.1 && <1.2
                     , time >=1.4 && <1.5
                     , tetrode-ephys
                     , transformers >=0.3 && <0.4
                     , vector
                     , yaml
                     , zlib
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -O2 -threaded -fllvm -fprof-auto -rtsopts "-with-rtsopts=-N8" -funbox-strict-fields

executable arteDecode
   build-depends:    base >= 4.6 && < 5, arte-ephys
   main-is:          decode.hs
   hs-source-dirs:   exec
   ghc-options:      -O2 -threaded -fllvm -fprof-auto -rtsopts "-with-rtsopts=-N4" -funbox-strict-fields
   default-language: Haskell2010

executable testPublisher
   build-depends:    base >= 4.6 && < 5
                   , async
                   , stm
                   , arte-ephys
                   , network
                   , optparse-applicative
                   , unix
                   , vector
                   , unordered-containers
                   , aeson
                   , text
                   , bytestring
                   , lens
                   , lens-aeson
   main-is:          testPublisher.hs
   hs-source-dirs:   exec
   default-language: Haskell2010