name:                     arte-backend
version:                  0.1
homepage:                 http://github.com/ImAlsoGreg/arte-ephys
synopsis:                 A soft-realtime tetrode recording system
description:              
        arte-ephys is a soft-realtime tetrode recording system.
        It collects data in small (~1ms) buffers for filtering,
        spike detection, network transfer, viewing, and
        online feedback.  The backend produces samples from 
        an AD card, filters them, in the LFP and spike bands,
        finds spikes, and saves the LFP and spikes to disk.
category:                 Science
license:                  GPL-3
license-file:             LICENSE
author:                   Greg Hale
maintainer:               imalsogreg@gmail.com
cabal-version:            >= 1.8
build-type:               Simple

executable arte-backend
           main-is:        Backend.hs
           ghc-options:    -Wall
           hs-source-dirs: src
           other-modules:  System.Arte.DaqSettings
                         , System.Arte.DataSourceSettings
                         , System.Arte.DataSource
