Name:                     arte-backend
Version:                  0.1
Homepage:                 http://github.com/ImAlsoGreg/arte-ephys
Synopsis:                 A soft-realtime tetrode recording system
Description:              
        arte-ephys is a soft-realtime tetrode recording system.
        It collects data in small (~1ms) buffers for filtering,
        spike detection, network transfer, viewing, and
        online feedback.  The backend produces samples from 
        an AD card, filters them, in the LFP and spike bands,
        finds spikes, and saves the LFP and spikes to disk.
Category:                 Science
License:                  GPL-3
License-File:             LICENSE
Author:                   Greg Hale
Maintainer:               imalsogreg@gmail.com
Cabal-Version:            >= 1.8
Build-Type:               Simple

Executable arte-backend
           Main-Is:        Backend.hs
           Ghc-Options:    -Wall
           Hs-Source-Dirs: src
           Other-Modules:  System.Arte.DaqSettings
                         , System.Arte.DataSourceSettings
                         , System.Arte.DataSource
