Name:               arte-mock-mwl
Version:            0.1
Homepage:           http://github.com/ImAlsoGreg/arte-ephys
Synopsis:           Stream data from arte or MWL to the network
Description:
       arte-mock-spike reads timestamped spikes, position, cluster 
       definitions, and eeg traces from a set of MWL files and writes 
       them to the network.  For use in testing
Category:           Science
License:            BSD3
License-File:       LICENSE
Author:             Greg Hale
Maintainer:         imalsogreg@gmail.com
Cabal-Version:      >= 1.8
Build-Type:         Simple

executable arteMockSpikes
  Build-Depends:    base,
                    arte-common,
                    pipes (>= 4.0),
                    pipes-rt (>= 0.4),
                    tetrode-ephys,
                    cmdargs,
                    directory,
                    yaml,
                    transformers,
                    filepath,
                    stm,
                    bytestring,
                    text (>= 1.1.0.0 && < 1.1.1),
                    cereal,
                    lens,
                    async,
                    network,
                    gtk
  Main-Is:          ArteMockMWL.hs
  ghc-options:      -O2 -threaded -fprof-auto "-with-rtsopts=-N3"
  hs-source-dirs:   src