name:                tetrode-ephys
version:             0.1.0.0
synopsis:            Types and functions for describing neurons and place fields
description:
  Representations of neural concepts pertaining to hippocampal place cells, with
  utilities for serialization and conversion from legacy formats.
license:             BSD3
license-file:        LICENSE
author:              Greg Hale
maintainer:          imalsogreg@gmail.com
copyright:           (c) 2015 Greg Hale, Shea Levy
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                  Data.Ephys,
                  Data.Map.KDMap,
                  Data.Ephys.EphysDefs,
                  Data.Ephys.TrackSpec,
                  Data.Ephys.TrackPosition,
                  Data.Ephys.Position,
                  Data.Ephys.PlaceCell,
                  Data.Ephys.Spike,
                  Data.Ephys.Cluster,
                  Data.Ephys.OldMWL.Header,
                  Data.Ephys.OldMWL.Parse,
                  Data.Ephys.OldMWL.ParsePFile,
                  Data.Ephys.OldMWL.ParseClusterFile,
                  Data.Ephys.OldMWL.FileInfo,
                  Data.Ephys.OldMWL.ParseSpike,
                  Data.Ephys.OldMWL.ParsePxyabw
  other-extensions:    BangPatterns,
                       GeneralizedNewtypeDeriving,
                       TypeSynonymInstances,
                       DeriveDataTypeable,
                       TemplateHaskell,
                       TypeFamilies,
                       NoMonomorphismRestriction,
                       DeriveGeneric,
                       RecordWildCards,
                       OverloadedStrings
  build-depends:       base >=4.6 && <4.9,
                       aeson >= 0.7 && < 0.10,
                       async >= 2.0 && < 2.1,
                       binary >= 0.7 && < 0.8,
                       bytestring >=0.10 && <0.11,
                       cereal >= 0.4 && < 0.5,
                       containers >=0.5 && <0.6,
                       data-binary-ieee754 >= 0.4 && < 0.5,
                       lens >= 4.6 && < 5.0,
                       parsec >= 3.1 && < 3.2,
                       pipes >= 4.1 && < 4.2,
                       pipes-binary >= 0.4 && < 0.5,
                       pipes-bytestring >= 2.1 && < 2.2,
                       pipes-parse >= 3.0 && < 3.1,
                       pipes-rt >= 0.5 && < 0.6,
                       safe >= 0.3 && < 0.4,
                       safecopy >= 0.8 && < 0.9,
                       stm >= 2.4 &&  < 2.5,
                       text >=1.2 && <1.3,
                       time >=1.5 && <1.6,
                       vector >=0.10 && <0.11,
                       vector-binary-instances >= 0.2 && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
