name:                tetrode-graphics
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Greg Hale
maintainer:          imalsogreg@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Ephys.DiagramsPictures, Data.Ephys.GlossPictures
  -- other-modules:       
  other-extensions:    TypeFamilies, NoMonomorphismRestriction
  build-depends:       base >=4.7 && <4.9,
--                       active >= 0.2 && < 0.3,
--                       diagrams >= 1.2 && < 1.4,
--                       diagrams-svg >= 1.2 && < 1.4,
--                       monoid-extras >= 0.4 && < 0.5,
                       gloss,
                       JuicyPixels,
                       lens,
                       tetrode-ephys,
                       vector >=0.10 && <0.11,
                       containers >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010