name:                   arte-backend
version:                0.1
homepage:               http://github.com/ImAlsoGreg/arte-ephys
synopsis:               Headless data source for arte-ephys
description:
        arte-ephys is a system for collecting in-vivo electrophysiology
        data and visualizing it in soft realtime.
category:               Science
license:                GPL-3
license-file:           LICENSE
author:                 Greg Hale
maintainer:             imalsogreg@gmail.com
cabal-version:          >= 1.2
build-type:             Simple

executable arte-backend
        build-depends:            yaml >= 0.5
                                , zeromq-haskell
        main-is:                DataSource.hs
        ghc-options:            -Wall        
        build-depends:          base
        extensions:             ForeignFunctionInterface